objects/Sold_To_Transfer_Request_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold To Transfer Request Header</relationshipLabel>
        <relationshipName>Sold_To_Transfer_Request_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachments_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_To_Transfer_Request_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold To Transfer Request Header (Target Sold To)</relationshipLabel>
        <relationshipName>Sold_To_Transfer_Request_Header1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <label>Sold To Transfer Request Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Region__c</columns>
        <columns>Regional_Controller__c</columns>
        <columns>Target_Sold_To__c</columns>
        <columns>Attachments_Linked__c</columns>
        <columns>Status__c</columns>
        <columns>Transfer_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>License_Entitlement_Queue_Sold_To_Transfer_Request_Header</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Region__c</columns>
        <columns>Regional_Controller__c</columns>
        <columns>Target_Sold_To__c</columns>
        <columns>Attachments_Linked__c</columns>
        <columns>Status__c</columns>
        <columns>Transfer_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>License Entitlement Queue</label>
        <language>en_US</language>
        <queue>License_Entitlement_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_APAC_Sold_To_Transfer_Request_Header</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers APAC</label>
        <queue>Transfer_Tool_Approvers_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_EMEA_Sold_To_Transfer_Request_Header</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers EMEA</label>
        <queue>Transfer_Tool_Approvers_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_LATAM_Sold_To_Transfer_Request_Header</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers LATAM</label>
        <queue>Transfer_Tool_Approvers_LATAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transfer_Tool_Approvers_North_America_Sold_To_Transfer_Request_Header</fullName>
        <filterScope>Queue</filterScope>
        <label>Transfer Tool Approvers North America</label>
        <queue>Transfer_Tool_Approvers_North_America</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>STTA{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sold To Transfer Request Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>